# Mai_arch_dz2_var6

./: README.md  aggregation.js  data.js  data.sql  docker-compose.dev.yml  docker-compose.yml  optimization.md  queries.js  schema.sql  schema_design.md  validation.js
configs/: openapi.yaml  static_config.yaml
delivery-api-lr-2/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
delivery-api-lr-2/configs/: openapi.yaml  static_config.yaml
delivery-api-lr-2/src/: main.cpp
delivery-api-lr-3/: CMakeLists.txt  README.md  data.sql  docker-compose.dev.yml  docker-compose.yaml  optimization.md  queries.sql  schema.sql
delivery-api-lr-4/: CMakeLists.txt  Dockerfile.dev  README.md  data.js  docker-compose.dev.yml  docker-compose.yml  optimization.md  queries.js  schema.sql
delivery-api-lr-4/configs/: openapi.yaml  static_config.yaml
delivery-api-lr-4/src/components/: mongo_storage_component.cpp
delivery-api-lr-4/src/handlers/: create_property_handler.cpp  create_property_handler.hpp  create_user_handler.hpp  get_properties_handler.cpp  get_properties_handler.hpp  get_users_handler.cpp  get_users_handler.hpp  swagger_ui_handler.cpp  swagger_ui_handler.hpp
delivery-api-lr-4/src/models/: dto.hpp  property.cpp  property.hpp  viewing.hpp
delivery-api-lr-4/tests/: requirements.txt
delivery-api-lr-5/: .clangd  CMakeLists.txt  Dockerfile  README.md  aggregation.js  docker-compose.dev.yml  docker-compose.yml  performance_design.md  queries.sql  schema_design.md  validation.js
src/: main.cpp
tests/: requirements.txt  test_api.py
(+100 files in other folders)
